@@ -437,3 +437,6 @@
 20040102 ui/scaler/scalers.c: merges to keep us close to ScummVM's code
 	 (rest of patch #868418) (Fred).
 20040102 ui/gtk/{gtkdisplay,gtkui}.c: allow 3x3 scaled modes.
+20040102 ui/gtk/gtkdisplay.c: in uidisplay_area, reorder the loop to
+	 improve cache localisation and then apply the obvious
+	 optimisations.
